# ray_trace_render

./: CMakeLists.txt  FeatureList.txt  README.md  README.txt  System.txt
ASCII/: scene.txt
Blender/: Export.py  test.blend
Code/: BVH.cpp  BVH.h  Cube.cpp  Cube.h  Image.cpp  Image.h  Matrix3.h  Plane.cpp  Plane.h  Ray.h  Sampling.h  Scene.cpp  Scene.h  SceneUtils.cpp  SceneUtils.h  Shape.h  Sphere.cpp  Sphere.h  Vector3.h  camera.cpp  camera.h  main.cpp
Textures/: brick_wall.ppm  checkerboard.ppm  gradient_sky.ppm  noise_texture.ppm  rainbow_stripes.ppm  wood_texture.ppm
